fix: vulnerabilidades y clean code de sonarQube